# polymarket-trader-retention

./: .env.example  .gitignore  ProjectDescription.md  README.md  polymarket-trader-retention-project-description.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
models/: churn_lgbm.joblib  churn_lgbm_behavioral.joblib  churn_logistic.joblib  feature_names.json  feature_names_behavioral.json  metrics.json  metrics_behavioral.json
scripts/: 00_check_access.py  01_pull_cohort_retention.py  02_pull_cohort_by_category.py  03_build_charts.py  05_pull_ever_returned.py  06_build_deck.py  07_pull_churn_features.py  08_train_churn_model.py  09_train_churn_behavioral.py  10_explain_demo.py
sql/: 01_cohort_retention.sql  02_cohort_retention_by_category.sql  03_ever_returned.sql  04_churn_features.sql
src/: analysis.py  churn_explain.py  churn_features.py  config.py  data_access.py
